bin/tests/snapshots/multiline_spacing__c66301143d9d8ba51f27d8df4886c166_lint_json.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  package = pkgs.writeShellApplication {
    name = "x";
  };
  zed = 2;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "multiline_spacing",
      "note": "Multiline attribute is not separated by blank lines",
      "code": 33,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 5,
              "column": 5
            }
          },
          "message": "a blank line should come before this multiline attribute",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 7,
                "column": 2
              }
            },
            "fix": "{\n  foo = 1;\n\n  package = pkgs.writeShellApplication {\n    name = \"x\";\n  };\n\n  zed = 2;\n}"
          }
        }
      ]
    }
  ]
}
