bin/tests/snapshots/multiline_spacing__c66771f87f879ef89b8238623051f5ed_lint_stderr.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];

  zed = 2;
}
---
