bin/tests/snapshots/multiline_spacing__d2cb7f49c875cd64611d73bfd010482e_lint_json.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  kernelModules = [
    "a"
    "b"
  ];
}
---
