bin/tests/snapshots/multiline_spacing__dc2ff8c4c8097da416e8fd274357b346_lint_errfmt.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  name = "x";
  text = ''
    hello
  '';
  zed = 1;
}
---
<temp_file_path>>3:3:W:33:[multiline_spacing] a blank line should come before this multiline attribute
