bin/tests/snapshots/multiline_spacing__dcf5278a8e55fb3093c6fd23a3edd5af_lint_json.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  kernelModules = [
    "a"
    "b"
  ];

  zed = 1;
}
---
