bin/tests/snapshots/multiline_spacing__e8e92c1b79ed9ba461d4081e63b4f47f_lint_errfmt.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  a = 1;
  foo =
    someLongThing;
  zed = 2;
}
---
